--- a/Topics/Understanding_Topics.ipynb
+++ b/Topics/Understanding_Topics.ipynb
@@ -14,20 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/rosout\n",
-      "/turtlesim\n",
-      "/turtlesim_display_146_1538051741512\n",
-      "/turtlesim_display_843_1538051797160\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rosnode list"
    ]
@@ -44,38 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rostopic is a command-line tool for printing information about ROS Topics.\n",
-      "\n",
-      "Commands:\n",
-      "\trostopic bw\tdisplay bandwidth used by topic\n",
-      "\trostopic delay\tdisplay delay of topic from timestamp in header\n",
-      "\trostopic echo\tprint messages to screen\n",
-      "\trostopic find\tfind topics by type\n",
-      "\trostopic hz\tdisplay publishing rate of topic    \n",
-      "\trostopic info\tprint information about active topic\n",
-      "\trostopic list\tlist active topics\n",
-      "\trostopic pub\tpublish data to topic\n",
-      "\trostopic type\tprint topic or field type\n",
-      "\n",
-      "Type rostopic <command> -h for more detailed usage, e.g. 'rostopic echo -h'\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "64",
-     "execution_count": 2,
-     "output_type": "error",
-     "traceback": []
-    }
-   ],
+   "outputs": [],
    "source": [
     "rostopic -h"
    ]
@@ -84,33 +44,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Using rostopic echo\n",
+    "`rostopic echo` shows the data published on a topic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rostopic echo -n 3 /turtle1/pose"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `-n` option echoes a number of messages. If not specified, the topic is shown until interrupted by keyboard."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using rostopic list\n",
     "`rostopic list` returns a list of all topics currently subscribed to and published."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Published topics:\n",
-      " * /turtle1/color_sensor [turtlesim/Color] 1 publisher\n",
-      " * /rosout [rosgraph_msgs/Log] 3 publishers\n",
-      " * /rosout_agg [rosgraph_msgs/Log] 1 publisher\n",
-      " * /turtle1/pose [turtlesim/Pose] 1 publisher\n",
-      "\n",
-      "Subscribed topics:\n",
-      " * /turtle1/cmd_vel [geometry_msgs/Twist] 1 subscriber\n",
-      " * /rosout [rosgraph_msgs/Log] 1 subscriber\n",
-      " * /turtle1/pose [turtlesim/Pose] 2 subscribers\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rostopic list -v"
    ]
@@ -124,17 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "geometry_msgs/Twist\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rostopic type /turtle1/cmd_vel"
    ]
@@ -148,25 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "geometry_msgs/Vector3 linear\n",
-      "  float64 x\n",
-      "  float64 y\n",
-      "  float64 z\n",
-      "geometry_msgs/Vector3 angular\n",
-      "  float64 x\n",
-      "  float64 y\n",
-      "  float64 z\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rosmsg show geometry_msgs/Twist"
    ]
@@ -180,17 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "publishing and latching message for 3.0 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rostopic pub -1 /turtle1/cmd_vel geometry_msgs/Twist -- \\\n",
     "'[2.0, 0.0, 0.0]' '[0.0, 0.0, 1.8]'"
@@ -219,7 +153,7 @@
     "\n",
     "You may have noticed that the turtle has stopped moving; this is because the turtle requires a steady stream of commands at 1 Hz to keep moving.\n",
     "\n",
-    "Now that you understand how ROS topics work, let's look at how [services and parameters](ROS%20Services%20and%20Parameters.ipynb) work."
+    "Now that you understand how ROS topics work, let's look at how [services](../Services/Understanding_Services.ipynb) work."
    ]
   }
  ],
