--- a/Services/Understanding_Services.ipynb
+++ b/Services/Understanding_Services.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Understanding ROS Services and Parameters\n",
-    "This tutorial introduces ROS services, and parameters as well as using the `rosservice` and `rosparam` commandline tools.\n",
+    "## Understanding ROS Services\n",
+    "This tutorial introduces ROS services and the `rosservice` commandline tool.\n",
     "\n",
     "Source: [ROS Wiki](http://wiki.ros.org/ROS/Tutorials/UnderstandingServicesParams) "
    ]
@@ -122,96 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using `rosparam`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`rosparam` allows you to store and manipulate data on the ROS [Parameter Server](http://wiki.ros.org/Parameter%20Server). The Parameter Server can store integers, floats, boolean, dictionaries, and lists. `rosparam` uses the YAML markup language for syntax. In simple cases, YAML looks very natural: `1` is an integer, `1.0` is a float, `one` is a string, `true` is a boolean, `[1, 2, 3]` is a list of integers, and `{a: b, c: d}` is a dictionary. `rosparam` has many commands that can be used on parameters, as shown below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rosparam -h"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's look at what parameters are currently on the param server:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rosparam list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's change one of the parameter values using `rosparam set`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "rosparam set background_r 150"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This changes the parameter value, now we have to call the clear service for the parameter change to take effect:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rosservice call clear"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can also use `rosparam get /` to show us the contents of the entire Parameter Server."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rosparam get /"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now let's begin to write some code. First, you will learn how to write a simple publisher and subscriber in Python."
+    "Now let's proceed with the [ROS parameters](../Parameters/Using_rosparam.ipynb) ."
    ]
   }
  ],
