--- a/index.ipynb
+++ b/index.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "### Topics\n",
     "* [Understanding Topics](Topics/Understanding_Topics.ipynb)\n",
-    "* Publisher and Subscriber in Python"
+    "* [Publisher and Subscriber in Python](Topics/Writing_the_Publisher_Node_in_Python.ipynb)"
    ]
   },
   {
@@ -30,7 +30,7 @@
     "\n",
     "### Services\n",
     "* [Understanding Services](Services/Understanding_Services.ipynb)\n",
-    "* Server and Client in Python\n",
+    "* [Server and Client in Python](Services/Writing_a_Service_Node_in_Python.ipynb)\n",
     "\n",
     "### Parameters\n",
     "* [Using rosparam](Parameters/Using_rosparam.ipynb)\n",
