--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,7 @@
     "* [Using rosparam](Parameters/Using_rosparam.ipynb)\n",
     "\n",
     "### Actions\n",
-    "* Simple Action Server and Client in Python"
+    "* [Simple Action Server and Client in Python](Actions/Simple_Action_Server.ipynb)"
    ]
   },
   {
