link to workspace

--- a/index.ipynb
+++ b/index.ipynb
@@ -15,7 +15,7 @@
     "## Concepts and Fundamentals\n",
     "\n",
     "### Nodes\n",
-    "* [Understanding Nodes](Nodes/Understanding_Nodes.ipynb)\n",
+    "* [Understanding Nodes](http://localhost:8888/lab/workspaces/nodes)\n",
     "\n",
     "### Topics\n",
     "* [Understanding Topics](Topics/Understanding_Topics.ipynb)\n",
