--- a/index.ipynb
+++ b/index.ipynb
@@ -9,17 +9,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Concepts and Fundamentals\n",
-    "\n",
-    "### Nodes\n",
-    "* [Understanding Nodes](http://localhost:8888/lab/workspaces/nodes)\n",
-    "\n",
-    "### Topics\n",
-    "* [Understanding Topics](Topics/Understanding_Topics.ipynb)\n",
-    "* [Publisher and Subscriber in Python](Topics/Writing_the_Publisher_Node_in_Python.ipynb)"
+    "import menu\n",
+    "menu.basic()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "menu.applications()"
    ]
   },
   {
@@ -28,15 +33,18 @@
    "source": [
     "## Basic Applications\n",
     "\n",
-    "### Services\n",
-    "* [Understanding Services](Services/Understanding_Services.ipynb)\n",
+    "* [Publisher and Subscriber in Python](/lab/workspaces/nodes/tree/Topics/Writing_the_Publisher_Node_in_Python.ipynb)\n",
     "* [Server and Client in Python](Services/Writing_a_Service_Node_in_Python.ipynb)\n",
-    "\n",
-    "### Parameters\n",
-    "* [Using rosparam](Parameters/Using_rosparam.ipynb)\n",
-    "\n",
-    "### Actions\n",
     "* [Simple Action Server and Client in Python](Actions/Simple_Action_Server.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "menu.transform()"
    ]
   },
   {
@@ -51,15 +59,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "shell",
-   "file_extension": ".sh",
-   "mimetype": "text/x-sh",
-   "name": "bash"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
