--- a/index.ipynb
+++ b/index.ipynb
@@ -9,22 +9,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import menu\n",
-    "menu.basic()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "menu.applications()"
+    "## Concepts and Fundamentals\n",
+    "\n",
+    "### Nodes\n",
+    "* [Understanding Nodes](Nodes/Understanding_Nodes.ipynb)\n",
+    "\n",
+    "### Topics\n",
+    "* [Understanding Topics](Topics/Understanding_Topics.ipynb)\n",
+    "* [Publisher and Subscriber in Python](Topics/Writing_the_Publisher_Node_in_Python.ipynb)"
    ]
   },
   {
@@ -33,18 +28,15 @@
    "source": [
     "## Basic Applications\n",
     "\n",
-    "* [Publisher and Subscriber in Python](/lab/workspaces/nodes/tree/Topics/Writing_the_Publisher_Node_in_Python.ipynb)\n",
+    "### Services\n",
+    "* [Understanding Services](Services/Understanding_Services.ipynb)\n",
     "* [Server and Client in Python](Services/Writing_a_Service_Node_in_Python.ipynb)\n",
+    "\n",
+    "### Parameters\n",
+    "* [Using rosparam](Parameters/Using_rosparam.ipynb)\n",
+    "\n",
+    "### Actions\n",
     "* [Simple Action Server and Client in Python](Actions/Simple_Action_Server.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "menu.transform()"
    ]
   },
   {
@@ -59,21 +51,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Bash",
+   "language": "bash",
+   "name": "bash"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "codemirror_mode": "shell",
+   "file_extension": ".sh",
+   "mimetype": "text/x-sh",
+   "name": "bash"
   }
  },
  "nbformat": 4,
