Add workspace json files

--- a/Nodes/turtlesim.ipynb
+++ b/Nodes/turtlesim.ipynb
@@ -15,7 +15,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash --bg\n",
     "xvfb-run --server-args='-screen 0 1024x768x24 -ac' \\\n",
     "rosrun turtlesim turtlesim_node"
    ]
@@ -24,45 +23,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You need to run the following code for viewing the simulator output in the notebook:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "import nbturtle\n",
-    "nbturtle.plot()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "NOTE: each time, the turtle may look different. Don't worry about it - there are [many types of turtle](http://wiki.ros.org/Distributions#Current_Distribution_Releases) and yours is a surprise!"
+    "You need to run [this notebook](turtleview.ipynb) for viewing the simulator output."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Bash",
+   "language": "bash",
+   "name": "bash"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "codemirror_mode": "shell",
+   "file_extension": ".sh",
+   "mimetype": "text/x-sh",
+   "name": "bash"
   }
  },
  "nbformat": 4,
