Remove usage info

--- a/README.ipynb
+++ b/README.ipynb
@@ -6,7 +6,6 @@
    "source": [
     "![ROS Industrial Homepage](img/logo.jpg)\n",
     "# Interactive Tutorials for ROS-Industrial\n",
-    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/RobInLabUJI/ROSIN-Tutorials/master?urlpath=lab/tree/README.ipynb)\n",
     "\n",
     "## Concepts and Fundamentals\n",
     "* [Nodes, Topics, Services, and Parameters](Concepts/Fundamentals/index.ipynb)\n",
@@ -18,15 +17,8 @@
     "\n",
     "## Transform Library\n",
     "* [Introduction to tf](Transform/Intro/index.ipynb)\n",
-    "* [Broadcaster and Listener in Python](Transform/Programming/index.ipynb)"
+    "* [Broadcaster and Listener in Python](Transform/Programming/index.ipynb)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
