Fix actionlib tutorial

--- a/Applications/Actions/Client.ipynb
+++ b/Applications/Actions/Client.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Writing the Client Node"
+    "## Writing a Simple Action Client\n",
+    "This tutorial covers using the `action_client` library to create a Fibonacci simple action client in Python."
    ]
   },
   {
@@ -14,14 +15,9 @@
    "outputs": [],
    "source": [
     "import rospy\n",
-    "from rospy_tutorials.srv import *"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The client code for calling services is also simple. For clients you don't have to call `init_node()`. We first call: "
+    "from __future__ import print_function\n",
+    "import actionlib\n",
+    "import actionlib_tutorials.msg"
    ]
   },
   {
@@ -30,14 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rospy.wait_for_service('add_two_ints')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is a convenience method that blocks until the service named `add_two_ints` is available. Next we create a handle for calling the service: "
+    "rospy.init_node('fibonacci_client_py')"
    ]
   },
   {
@@ -46,14 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_two_ints = rospy.ServiceProxy('add_two_ints', AddTwoInts)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can use this handle just like a normal function and call it: "
+    "client = actionlib.SimpleActionClient('fibonacci', \n",
+    "                                      actionlib_tutorials.msg.FibonacciAction)\n",
+    "client.wait_for_server()"
    ]
   },
   {
@@ -62,26 +46,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    print( add_two_ints(5, 30) )\n",
-    "except rospy.ServiceException, e:\n",
-    "    print \"Service call failed: %s\"%e"
+    "goal = actionlib_tutorials.msg.FibonacciGoal(order=5)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Because we've declared the type of the service to be `AddTwoInts`, it does the work of generating the `AddTwoIntsRequest` object for you (you're free to pass in your own instead). The return value is an `AddTwoIntsResponse` object. If the call fails, a `rospy.ServiceException` may be thrown, so you should setup the appropriate `try/except` block. "
+    "client.send_goal(goal)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "For going back to the main page, please close the other tabs and click on the following link:\n",
-    "[Go back to the main page](../../README.ipynb)"
+    "client.wait_for_result()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = client.get_result()\n",
+    "print(\"Result:\", ', '.join([str(n) for n in result.sequence]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
