--- a/Applications/Actions/Server.ipynb
+++ b/Applications/Actions/Server.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Writing a Service Node\n",
-    "Here we'll create the service (\"add_two_ints_server\") node which will receive two ints and return the sum. "
+    "## Writing a Simple Action Server using the Execute Callback\n",
+    "This tutorial covers using the simple_action_server library to create a Fibonacci action server in Python. This example action server generates a Fibonacci sequence, the goal is the order of the sequence, the feedback is the sequence as it is computed, and the result is the final sequence."
    ]
   },
   {
@@ -14,8 +14,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rospy_tutorials.srv import *\n",
-    "import rospy"
+    "import rospy\n",
+    "import actionlib\n",
+    "import actionlib_tutorials.msg"
    ]
   },
   {
@@ -24,16 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def handle_add_two_ints(req):\n",
-    "    print \"Returning [%s + %s = %s]\"%(req.a, req.b, (req.a + req.b))\n",
-    "    return AddTwoIntsResponse(req.a + req.b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There's very little to writing a service using [rospy](http://wiki.ros.org/rospy). We declare our node using `init_node()` and then declare our service: "
+    "action_name = 'fibonacci'\n",
+    "feedback = actionlib_tutorials.msg.FibonacciFeedback()\n",
+    "result = actionlib_tutorials.msg.FibonacciResult()"
    ]
   },
   {
@@ -42,17 +36,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rospy.init_node('add_two_ints_server')\n",
-    "s = rospy.Service('add_two_ints', AddTwoInts, handle_add_two_ints)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This declares a new service named `add_two_ints` with the `AddTwoInts` service type. All requests are passed to `handle_add_two_ints` function. `handle_add_two_ints` is called with instances of `AddTwoIntsRequest` and returns instances of `AddTwoIntsResponse`. \n",
-    "\n",
-    "Just like with the subscriber example, `rospy.spin()` keeps your code from exiting until the service is shutdown. "
+    "def execute_cb(goal):\n",
+    "    r = rospy.Rate(1)\n",
+    "    success = True\n",
+    "    feedback.sequence = []\n",
+    "    feedback.sequence.append(0)\n",
+    "    feedback.sequence.append(1)\n",
+    "    rospy.loginfo('%s: Executing, creating fibonacci sequence of order %i with seeds %i, %i' % \n",
+    "                  (action_name, goal.order, feedback.sequence[0], feedback.sequence[1]))\n",
+    "    for i in range(1, goal.order):\n",
+    "            if action_server.is_preempt_requested():\n",
+    "                rospy.loginfo('%s: Preempted' % self._action_name)\n",
+    "                action_server.set_preempted()\n",
+    "                success = False\n",
+    "                break\n",
+    "            feedback.sequence.append(feedback.sequence[i] + feedback.sequence[i-1])\n",
+    "            action_server.publish_feedback(feedback)\n",
+    "            r.sleep()          \n",
+    "    if success:\n",
+    "            result.sequence = feedback.sequence\n",
+    "            rospy.loginfo('%s: Succeeded' % action_name)\n",
+    "            action_server.set_succeeded(result)"
    ]
   },
   {
@@ -61,7 +65,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print \"Ready to add two ints.\"\n",
+    "action_server = actionlib.SimpleActionServer(action_name, actionlib_tutorials.msg.FibonacciAction, \n",
+    "                                  execute_cb = execute_cb, auto_start = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rospy.init_node('fibonacci')\n",
+    "action_server.start()\n",
     "rospy.spin()"
    ]
   },
@@ -69,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now define the [client node](Client.ipynb)."
+    "[Writing a Simple Action Client](Client.ipynb)."
    ]
   }
  ],
