--- a/Applications/Actions/index.ipynb
+++ b/Applications/Actions/index.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "![ROS Industrial Homepage](../../img/logo.jpg)\n",
     "# Interactive Tutorials for ROS-Industrial\n",
-    "# Services: Server and Client in Python\n",
-    "This tutorial covers how to write a service and client node in python (source: [ROS wiki](http://wiki.ros.org/ROS/Tutorials/WritingServiceClient%28python%29))."
+    "# Actionlib: Server and Client in Python\n",
+    "This tutorial covers how to write an actionlib server and client node in python (source: [ROS wiki](http://wiki.ros.org/actionlib_tutorials/Tutorials/Writing%20a%20Simple%20Action%20Server%20using%20the%20Execute%20Callback%20%28Python%29))."
    ]
   },
   {
