Add keyboard exception

--- a/Concepts/Topics/Publisher.ipynb
+++ b/Concepts/Topics/Publisher.ipynb
@@ -131,7 +131,7 @@
    "source": [
     "try:\n",
     "    talker()\n",
-    "except rospy.ROSInterruptException:\n",
+    "except KeyboardInterrupt, rospy.ROSInterruptException:\n",
     "    pass"
    ]
   },
