update concept tutorials

--- a/Concepts/Fundamentals/Parameters.ipynb
+++ b/Concepts/Fundamentals/Parameters.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's change one of the parameter values using `rosparam set`:"
+    "Let's change some parameter values using `rosparam set`:"
    ]
   },
   {
@@ -52,14 +52,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rosparam set background_r 150"
+    "rosparam set background_r 190\n",
+    "rosparam set background_g 30\n",
+    "rosparam set background_b 80"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This changes the parameter value, now we have to call the clear service for the parameter change to take effect:"
+    "This changes the parameter values, now we have to call the clear service for the parameter change to take effect:"
    ]
   },
   {
