--- a/Concepts/Fundamentals/Services.ipynb
+++ b/Concepts/Fundamentals/Services.ipynb
@@ -129,6 +129,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's try other available services, e.g. chaning the turtle pen color. First, let's look at the service arguments:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rosservice type /turtle1/set_pen | rossrv show"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You may try different combinations of RGB colors, and pen width."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rosservice call /turtle2/set_pen 0 255 0 5 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now remember to publish the velocity [topic](Topics.ipynb) for moving the turtle."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another service teleports the turtle to a different position and orientation in the simulator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rosservice type /turtle1/teleport_absolute | rossrv show"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, you may change the coordinates and/or the angle of the turtle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rosservice call /turtle1/teleport_absolute 5 5 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now let's proceed with the [ROS parameters](Parameters.ipynb)."
    ]
   }
