--- a/Concepts/Topics/Publisher.ipynb
+++ b/Concepts/Topics/Publisher.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## The Publisher Node\n",
-    "Let's break the code down."
+    "\"Node\" is the ROS term for an executable that is connected to the ROS network. Here we'll create the publisher (\"talker\") node which will  broadcast a message. But first, make sure that [roscore](./roscore.ipynb) is running in the bottom tab of this workspace."
    ]
   },
   {
@@ -31,8 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pub = rospy.Publisher('chatter', String, queue_size=10)\n",
-    "rospy.init_node('talker', anonymous=True)"
+    "pub = rospy.Publisher('chatter', String, queue_size=10)"
    ]
   },
   {
@@ -40,8 +39,22 @@
    "metadata": {},
    "source": [
     "This section of code defines the talker's interface to the rest of ROS.  \n",
-    "`pub = rospy.Publisher(\"chatter\", String, queue_size=10)` declares that your node is publishing to the `chatter` topic using the message type `String`. `String` here is actually the class `std_msgs.msg.String`. The `queue_size` argument is <span style=\"background-color:yellow\">**New in ROS hydro**</span> and limits the amount of queued messages if any subscriber is not receiving them fast enough. In older ROS distributions just omit the argument.\n",
-    "\n",
+    "`pub = rospy.Publisher(\"chatter\", String, queue_size=10)` declares that your node is publishing to the `chatter` topic using the message type `String`. `String` here is actually the class `std_msgs.msg.String`. The `queue_size` argument limits the amount of queued messages if any subscriber is not receiving them fast enough."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rospy.init_node('talker', anonymous=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The next line, `rospy.init_node(NAME, ...)`, is very important as it tells rospy the name of your node -- until rospy has this information, it cannot start communicating with the ROS [Master](http://wiki.ros.org/Master). In this case, your node will take on the name `talker`. NOTE: the name must be a [base name](http://wiki.ros.org/Names), i.e. it cannot contain any slashes \"/\".\n",
     "\n",
     "`anonymous = True` ensures that your node has a unique name by adding random numbers to the end of NAME. [Refer to Initialization and Shutdown - Initializing your ROS Node](http://wiki.ros.org/rospy/Overview/Initialization%20and%20Shutdown#Initializing_your_ROS_Node) in the `rospy` documentation for more information about node initialization options. "
@@ -70,10 +83,12 @@
    "outputs": [],
    "source": [
     "def talker():\n",
+    "    count = 1\n",
     "    while not rospy.is_shutdown():\n",
-    "        hello_str = \"hello world %s\" % rospy.get_time()\n",
-    "        rospy.loginfo(hello_str)\n",
-    "        pub.publish(hello_str)\n",
+    "        msg = String()\n",
+    "        msg.data = \"hello world %d\" % count\n",
+    "        pub.publish(msg)\n",
+    "        count += 1\n",
     "        rate.sleep()"
    ]
   },
@@ -81,39 +96,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This loop is a fairly standard rospy construct: checking the `rospy.is_shutdown()` flag and then doing work. You have to check `is_shutdown()` to check if your program should exit (e.g. if there is a `Ctrl-C` or otherwise). In this case, the \"work\" is a call  to `pub.publish(hello_str)` that publishes a string to our chatter topic. The loop calls `rate.sleep()`, which sleeps just long enough to maintain the desired rate through the loop.\n",
+    "This loop is a fairly standard rospy construct: checking the `rospy.is_shutdown()` flag and then doing work. You have to check `is_shutdown()` to check if your program should exit (e.g. if there is a `Ctrl-C` or otherwise). In this case, the \"work\" is a call  to `pub.publish(msg)` that publishes a string to our chatter topic. The loop calls `rate.sleep()`, which sleeps just long enough to maintain the desired rate through the loop.\n",
     "\n",
-    "(You may also run across `rospy.sleep()` which is similar to `time.sleep()` except that it works with simulated time as well (see [Clock](http://wiki.ros.org/Clock)).) \n",
-    "\n",
-    "This loop also calls `rospy.loginfo(str)`, which performs triple-duty: the messages get printed to screen, it gets written to the Node's log file, and it gets written to [rosout](http://wiki.ros.org/rosout). [rosout](http://wiki.ros.org/rosout) is a handy for debugging: you can pull up messages using [rqt_console](http://wiki.ros.org/rqt_console) instead of having to find the console window with your Node's output. \n",
-    "\n",
-    "`std_msgs.msg.String` is a very simple message type, so you may be wondering what it looks like to publish more complicated types. The general rule of thumb is that constructor args are in the same order as in the *.msg* file. You can also pass in no arguments and initialize the fields directly, e.g. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "msg = String()\n",
-    "msg.data = str"
+    "(You may also run across `rospy.sleep()` which is similar to `time.sleep()` except that it works with simulated time as well (see [Clock](http://wiki.ros.org/Clock)).) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "or you can initialize some of the fields and leave the rest with default values: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "String(data=str)"
+    "Before starting to publish, let's first move to the [Subscriber Node](Subscriber.ipynb) in the right tab of the workspace."
    ]
   },
   {
@@ -139,14 +131,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This catches a `rospy.ROSInterruptException` exception, which can be thrown by `rospy.sleep()` and `rospy.Rate.sleep()` methods when `Ctrl-C` is pressed or your Node is otherwise shutdown. The reason this exception is raised is so that you don't accidentally continue executing code after the `sleep()`. "
+    "This catches a `KeyboardInterrupt` or a `rospy.ROSInterruptException` exception, which can be thrown by `rospy.sleep()` and `rospy.Rate.sleep()` methods when `Ctrl-C` is pressed or your Node is otherwise shutdown. The reason this exception is raised is so that you don't accidentally continue executing code after the `sleep()`.\n",
+    "\n",
+    "When you run the talker, messages will be displayed in the subscriber window.\n",
+    "\n",
+    "After a while, you may now stop the talker loop by pressing the `Interrupt` button of this notebook and publish a single message with the commands:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg = String()\n",
+    "msg.data = \"ROS-Industrial rocks!\"\n",
+    "pub.publish(msg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now define the [Subscriber Node](Subscriber.ipynb)"
+    "Feel free to edit the data before sending the message, and verify that the content displayed in the subscriber window is the same as sent by the publisher.\n",
+    "\n",
+    "For going back to the main page, please close the other tabs and click on the following link:\n",
+    "[Go back to the main page](../../README.ipynb)"
    ]
   }
  ],
