--- a/Concepts/Topics/Subscriber.ipynb
+++ b/Concepts/Topics/Subscriber.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code for the listener is similar to the talker, except we've introduced a new callback-based mechanism for subscribing to messages. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -24,14 +31,7 @@
    "outputs": [],
    "source": [
     "def callback(data):\n",
-    "    rospy.loginfo(rospy.get_caller_id() + \"I heard %s\", data.data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The code for the listener is similar to the talker, except we've introduced a new callback-based mechanism for subscribing to messages. "
+    "    print('I heard \"%s\"' % data.data)"
    ]
   },
   {
@@ -40,10 +40,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rospy.init_node('listener', anonymous=True)\n",
-    "\n",
-    "rospy.Subscriber(\"chatter\", String, callback)\n",
-    "\n",
+    "rospy.init_node('listener', anonymous=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also changed up the call to `rospy.init_node()` somewhat. We've added the `anonymous=True` keyword argument. ROS requires that each node have a unique name. If a node with the same name comes up, it bumps the previous one. This is so that malfunctioning nodes can easily be kicked off the network. The `anonymous=True` flag tells `rospy` to generate a unique name for the node so that you can have multiple listener nodes run easily."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rospy.Subscriber(\"chatter\", String, callback)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This declares that your node subscribes to the `chatter` topic which is of type `std_msgs.msgs.String`. When new messages are received, `callback` is invoked with the message as the first argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rospy.spin()"
    ]
   },
@@ -51,19 +79,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This declares that your node subscribes to the `chatter` topic which is of type `std_msgs.msgs.String`. When new messages are received, `callback` is invoked with the message as the first argument.\n",
+    "The final addition, `rospy.spin()` simply keeps your node from exiting until the node has been shutdown. Unlike `roscpp`, `rospy.spin()` does not affect the subscriber callback functions, as those have their own threads.\n",
     "\n",
-    "We also changed up the call to `rospy.init_node()` somewhat. We've added the `anonymous=True` keyword argument. ROS requires that each node have a unique name. If a node with the same name comes up, it bumps the previous one. This is so that malfunctioning nodes can easily be kicked off the network. The `anonymous=True` flag tells `rospy` to generate a unique name for the node so that you can have multiple listener nodes run easily.\n",
-    "\n",
-    "The final addition, `rospy.spin()` simply keeps your node from exiting until the node has been shutdown. Unlike `roscpp`, `rospy.spin()` does not affect the subscriber callback functions, as those have their own threads."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For going back to the main page, please close the other tabs and click on the following link:\n",
-    "[Go back to the main page](../../README.ipynb)"
+    "Please go back to the [Publisher Node](Publisher.ipynb) for starting to send messages."
    ]
   }
  ],
