--- a/Concepts/Topics/Publisher.ipynb
+++ b/Concepts/Topics/Publisher.ipynb
@@ -84,8 +84,8 @@
    "source": [
     "def talker():\n",
     "    count = 1\n",
+    "    msg = String()\n",
     "    while not rospy.is_shutdown():\n",
-    "        msg = String()\n",
     "        msg.data = \"hello world %d\" % count\n",
     "        pub.publish(msg)\n",
     "        count += 1\n",
@@ -112,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may be wondering about the last little bit: "
+    "You may now start to send messages with this last bit of code: "
    ]
   },
   {
