--- a/Applications/Services/Client.ipynb
+++ b/Applications/Services/Client.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import rospy\n",
-    "from rospy_tutorials.srv import *"
+    "from rospy_tutorials.srv import AddTwoInts, AddTwoIntsRequest"
    ]
   },
   {
@@ -65,21 +65,41 @@
     "try:\n",
     "    print( add_two_ints(5, 30) )\n",
     "except rospy.ServiceException, e:\n",
-    "    print \"Service call failed: %s\"%e"
+    "    print( \"Service call failed: %s\" % e )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because we've declared the type of the service to be `AddTwoInts`, it does the work of generating the `AddTwoIntsRequest` object for you (you're free to pass in your own instead). The return value is an `AddTwoIntsResponse` object. If the call fails, a `rospy.ServiceException` may be thrown, so you should setup the appropriate `try/except` block. "
+    "Because we've declared the type of the service to be `AddTwoInts`, it does the work of generating the `AddTwoIntsRequest` object for you (you're free to pass in your own instead with the code below). The return value is an `AddTwoIntsResponse` object. If the call fails, a `rospy.ServiceException` may be thrown, so you should setup the appropriate `try/except` block. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    req = AddTwoIntsRequest(5, 30)\n",
+    "    print( add_two_ints(req) )\n",
+    "except rospy.ServiceException, e:\n",
+    "    print( \"Service call failed: %s\" % e )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For going back to the main page, please close the other tabs and click on the following link:\n",
+    "Please feel free to call the service again in either of the two ways, with different numbers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you are done, for going back to the main page, please close the other tabs and click on the following link:\n",
     "[Go back to the main page](../../README.ipynb)"
    ]
   }
