--- a/Applications/Services/Server.ipynb
+++ b/Applications/Services/Server.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "## Writing a Service Node\n",
-    "Here we'll create the service (\"add_two_ints_server\") node which will receive two ints and return the sum. "
+    "Here we'll create the service (\"add_two_ints_server\") node which will receive two ints and return the sum. \n",
+    "\n",
+    "For running this code, please make sure that `roscore` is active (you may execute it at the [bottom tab of this workspace](roscore.ipynb))."
    ]
   },
   {
@@ -14,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rospy_tutorials.srv import *\n",
+    "from rospy_tutorials.srv import AddTwoInts, AddTwoIntsResponse\n",
     "import rospy"
    ]
   },
@@ -25,8 +27,9 @@
    "outputs": [],
    "source": [
     "def handle_add_two_ints(req):\n",
-    "    print \"Returning [%s + %s = %s]\"%(req.a, req.b, (req.a + req.b))\n",
-    "    return AddTwoIntsResponse(req.a + req.b)"
+    "    resp = AddTwoIntsResponse(req.a + req.b)\n",
+    "    print \"Returning [%s + %s = %s]\" % (req.a, req.b, resp.sum)\n",
+    "    return resp"
    ]
   },
   {
@@ -61,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print \"Ready to add two ints.\"\n",
+    "print( \"Ready to add two ints.\" )\n",
     "rospy.spin()"
    ]
   },
